--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+/YatzySimulator/SampleData
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
